* Discussion pages are now paged, i.e., only a maximum number of comments
  (default 50) are shown at once, with paging links to visit other pages of
  comments.
* Comment syndication feeds are now available. Currently, there is one feed
  per wikilog article, that lists comments made to that article. In the
  future, feeds per thread, per wikilog and global may be provided.

=== Bug fixes ===

* (mw:bug 21657) Message wikilog-item-brief-header/footer replaced by
  wikilog-summary-header/footer and others, with proper PLURAL support.
* (wl:issue 1) Improve header/footer item messages.
* (wl:issue 5) Usability improvement in wikilog actions tab.
* Disabled minimum feed cache age check ($wgFeedCacheTimeout) in
  WikilogFeed, since this causes the wrong Last-modified header to be
  output. Waiting for a fix for the same problem found in ChangesFeed.
  Noted by Vitaliy Filippov.
* Don't croak in Wikilog::getWikilogInfo() if $title is NULL. Patch by
  Vitaliy Filippov.


== Wikilog 1.0.1 ==

Nov 27, 2009

=== General notes ===

This is a bugfix release of the 1.0.x branch.  There are no database changes
since Wikilog 1.0.0.

=== New configuration options ===

* $wgWikilogSignAndPublishDefault: default state for the new "sign and
  publish" checkbox in the edit page for new articles.

=== New features ===

* New parameters 'date', 'time', 'updatedDate', 'updatedTime' and 'hasMore'
  for the template pager, used when embedding using templates. Old parameters
  'pubdate' and 'updated' were deprecated, and should be removed on v1.2.0.
* Wikilog article edit page now features a "sign and publish" checkbox that,
  when selected, automatically signs and publishes the article by adding an
  appropriate {{wl-publish:...}} parser function call at the end of the text.

=== Bug fixes ===

* wikilogImportDocumentation.php updated to work with MediaWiki 1.16.
* Fix pass-by-reference call warning on SkinTemplateTabs hook.